# pfs_quicklook

./: .env.example  .gitignore  .python-version  CLAUDE.md  LICENSE  README.md  app.py  launch_app.bash  pyproject.toml  quicklook_core.py  requirements.txt  setup.py  version.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: README.md  setup.md  troubleshooting.md
docs/user-guide/: 1d-spectra.md  2d-images.md  index.md  loading-data.md
legacy/: README.md  check_quick_reduction_data.py
